# Phol

./: .gitignore  LICENSE  README.md  app.py  index.html  pyproject.toml  requirements.txt  run.py
app/: evaluation.ipynb  main.py
app/results/: yolov3m-150.csv  yolov5m-150.csv
app/static/styles/: style.css
app/templates/: index.html
eda/results/: yolov12m-150.csv  yolov12m-250.csv  yolov12n-250.csv
results/: yolov10m-150.csv  yolov11m-150.csv  yolov11m-151.csv  yolov11m-250.csv  yolov6m-150.csv  yolov8m-150.csv  yolov9m-150.csv
static/scripts/: script.js
static/styles/: style.css
